added another navbar that is stylised. my plan is to merge the code of the functional and stylised navbars into one navbar. i have also moved the forecast pages and linked them up. sorry i didnt see them before.

--- a/greenair-website/src/index.css
+++ b/greenair-website/src/index.css
@@ -11,3 +11,8 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
+
+/* Add the Tailwind directives to your main CSS file */
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
