--- a/greenair-website/src/contact.css
+++ b/greenair-website/src/contact.css
@@ -1,6 +1,9 @@
 .contact {
-    background-color: aliceblue;
-    background-size: cover;
+  background-image: url('./images/Contact\ \(6\).png');
+  background-size: auto 100%;
     min-width: 100%;
     min-height: 100%;
   }
+
+  
+  
