some arbitrary improvements

--- a/greenair-website/src/pages/Home.css
+++ b/greenair-website/src/pages/Home.css
@@ -1,4 +1,6 @@
-#elem {animation: blink 0.3s infinite}
+#blinking {
+    animation: blink 0.3s infinite
+}
 
 @keyframes blink {
     from {opacity: 0}
