Corrected social icons format and added links

--- a/greenair-website/src/Socials_component/Socials.css
+++ b/greenair-website/src/Socials_component/Socials.css
@@ -1,8 +1,20 @@
 .socials {
-    color: aquamarine;
+   
     display: flex;
     flex-flow: nowrap;
     justify-content: space-evenly;
     gap: 300px;
-    align-content: flex-end;
+    font-size: 30px;
+    position:fixed;
+    left: 220px;
+    bottom:20px;
+}
+
+.footer-icon{
+    
+    color: #268BAF;
+    justify-items: center;
+    
+    
+
 }
