--- a/greenair-website/src/Socials_component/Socials.css
+++ b/greenair-website/src/Socials_component/Socials.css
@@ -4,7 +4,7 @@
     flex-flow: nowrap;
     justify-content: space-evenly;
     gap: 300px;
-    font-size: 30px;
+    font-size: 35px;
     position:fixed;
     left: 220px;
     bottom:20px;
@@ -12,9 +12,10 @@
 
 .footer-icon{
     
-    color: #268BAF;
+    color: #3C4A3F;
     justify-items: center;
     
     
 
 }
+
