--- a/greenair-website/src/pages/Home.css
+++ b/greenair-website/src/pages/Home.css
@@ -6,3 +6,23 @@
     from {opacity: 0}
     to {opacity: 1}
     }
+
+.App {
+    height:'10vh';
+    
+/* not sure what font should be */
+    font-family: "arial"
+
+
+    }
+
+#fcbutton {
+
+    background-color: white;
+    color: black;
+    border: 2px solid #555555;}
+
+#fcbutton:hover {
+        background-color: #555555;
+        color: white;
+        } 
