--- a/greenair-website/src/pages/Home.css
+++ b/greenair-website/src/pages/Home.css
@@ -6,8 +6,7 @@
   padding: 8rem;
 }
 
-body,
-html {
+body, html {
   margin: 0;
   padding: 0;
   overflow-x: hidden;
@@ -28,7 +27,6 @@ html {
   /* not sure what font should be */
   font-family: "arial";
   font-size: 12 px;
-
   text-align: center;
 }
 
@@ -42,4 +40,8 @@ html {
 #fcbutton:hover {
   background-color: #555555;
   color: white;
+}
+
+.weatherWidget {
+/* please can someone make this widget behave itself? */
 }
