--- a/greenair-website/src/pages/login.css
+++ b/greenair-website/src/pages/login.css
@@ -1,17 +1,17 @@
-#{
+/* #{
     margin: 0;
     padding: 0;
     box-sizing: border-box;
     font-family: monserrat, sans-serif;
 
-}
+} */
 input, button {
 appearance: none;
 background: none;
 border: none;
 outline: none;
 }
-.Login{
+.LoginFrom{
     height: 100vh;
     display: flex;
     align-items: center;
@@ -38,28 +38,29 @@ position: relative;
 display: block;
 background-color: rgb(48, 161, 38);
 padding: 30px;
-z-index:2;
+z-index: index 1;;
 }
 
-form.form-inner .form-group{
+/* form.form-inner .form-group{
     display: block;
     color: aqua;
     width: 300px;
     margin-bottom: 50px;
-}
+} */
 
 form .form-inner .form-group label{
     display: block;
     color: rgb(0, 0, 0);
-    font-size: 15px;
+    font-size: 20px;
     margin-bottom: 5px;
     transition: 0.4s;
 }
 form .form-inner .form-group input{
     display: block;
     width: 30%;
-    position: center;
-    padding: 10px 15px;
+
+    padding: 20px;
+    margin-left: 500px;
     background-color: rgb(176, 214, 195);
-    border-radius: 5px;
+    border-radius: 1px;
 }
