--- a/greenair-website/src/Socials_component/Socials.css
+++ b/greenair-website/src/Socials_component/Socials.css
@@ -2,19 +2,21 @@
    
     display: flex;
     flex-flow: nowrap;
-    justify-content: space-evenly;
+    justify-content: center;
     gap: 300px;
     font-size: 35px;
     position:fixed;
-    left: 220px;
+    left: 320px;
     bottom:20px;
+    flex-direction: row;
+    
     
 }
 
 .footer-icon{
     
     color: #3C4A3F;
-    justify-items: center;
+    justify-items: center; 
     
     
 
