Centred project logo

--- a/greenair-website/src/pages/Home.css
+++ b/greenair-website/src/pages/Home.css
@@ -14,10 +14,13 @@ body, html {
 }
 
 .App-logo {
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
   width: 300px;
   height: 300px;
   position: relative;
-  left: 670px;
+ 
   top: -110px;
   margin-top: -30px;
 }
