--- a/greenair-website/src/pages/login.css
+++ b/greenair-website/src/pages/login.css
@@ -1,17 +1,17 @@
-/* #{
+* {
     margin: 0;
     padding: 0;
     box-sizing: border-box;
     font-family: monserrat, sans-serif;
 
-} */
+}
 input, button {
 appearance: none;
-background: none;
-border: none;
+background: rgb(159, 206, 159);
+border: solid round;
 outline: none;
-}
-.LoginFrom{
+} 
+ .LoginForm{
     height: 100vh;
     display: flex;
     align-items: center;
@@ -33,20 +33,21 @@ form :after{
     z-index: 1;
     background-image: linear-gradient(to botton-right #FE4553, #18ca36);
 }
-form.form-inner{
+/* form.form-inner{
 position: relative;
 display: block;
 background-color: rgb(48, 161, 38);
 padding: 30px;
-z-index: index 1;;
-}
+z-index: index 1;
+font: sans-serif;
+} */
 
-/* form.form-inner .form-group{
+ /* form.form-inner .form-group{
     display: block;
     color: aqua;
     width: 300px;
     margin-bottom: 50px;
-} */
+}  */
 
 form .form-inner .form-group label{
     display: block;
@@ -59,7 +60,7 @@ form .form-inner .form-group input{
     display: block;
     width: 30%;
 
-    padding: 20px;
+    padding: 15px;
     margin-left: 500px;
     background-color: rgb(176, 214, 195);
     border-radius: 1px;
