Revert "Format fixes for Home"
This reverts commit a81c2ea71819f70920822fd1534d036c096936c4.

--- a/greenair-website/src/Socials_component/Socials.css
+++ b/greenair-website/src/Socials_component/Socials.css
@@ -2,21 +2,19 @@
    
     display: flex;
     flex-flow: nowrap;
-    justify-content: center;
+    justify-content: space-evenly;
     gap: 300px;
     font-size: 35px;
     position:fixed;
-    left: 320px;
+    left: 220px;
     bottom:20px;
-    flex-direction: row;
-    
     
 }
 
 .footer-icon{
     
     color: #3C4A3F;
-    justify-items: center; 
+    justify-items: center;
     
     
 
