--- a/greenair-website/src/pages/NoPage.css
+++ b/greenair-website/src/pages/NoPage.css
@@ -3,7 +3,8 @@ p.bubble {
     width: 300px;
     text-align: center;
     line-height: 1.4em;
-    margin: 40px 500px; /** x,y alignment of speech bubble **/
+    margin: 40px 500px;
+    /** x,y alignment of speech bubble **/
     background-color: #fff;
     border: 8px solid #333;
     border-radius: 30px;
@@ -35,17 +36,17 @@ p.speech:after {
 }
 
 .container {
-position: relative;
+    position: relative;
 }
 
 .center {
-position: absolute;
-top: -5%;
-width: 70%;
-text-align: left;
-font-size: 18px;
+    position: absolute;
+    top: -5%;
+    width: 70%;
+    text-align: left;
+    font-size: 18px;
 }
 
 .img {
-border-radius: 14%;
+    border-radius: 14%;
 }
