--- a/greenair-website/src/pages/Home.css
+++ b/greenair-website/src/pages/Home.css
@@ -1,13 +1,14 @@
 .bg {
   background-image: url(../images/Homepage.jpg);
   background-position: center;
-  height: 100vh;  
+  height: 100vh;
   width: "100%";
   padding: 8rem;
   background-size: 100% 100%;
 }
 
-body, html {
+body,
+html {
   margin: 0;
   padding: 0;
   overflow-x: hidden;
@@ -20,7 +21,7 @@ body, html {
   width: 300px;
   height: 300px;
   position: relative;
- 
+
   top: -110px;
   margin-top: -30px;
 }
@@ -47,11 +48,11 @@ body, html {
 }
 
 .weatherWidget {
-  
- position: relative;
- margin-top:70px;
- margin-left: -350px;
-  
-  
+
+  position: relative;
+  margin-top: 70px;
+  margin-left: -350px;
+
+
   /* please can someone make this widget behave itself? */
 }
